--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,13 +1,16 @@
 spring.profiles.active=dev
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-server.port=8080
+server.port=8082
 server.servlet.contextPath=/api/notification
 
-#Flyway
-
+# Flyway
 spring.flyway.enabled = true
 spring.flyway.url = ${spring.datasource.url}
 spring.flyway.user = ${spring.datasource.username}
 spring.flyway.password = ${spring.datasource.password}
 spring.flyway.schemas=${spring.datasource.schema}
+
+# Swagger
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
