--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=dev
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 server.port=8082
-server.servlet.contextPath=/api/notification
+server.servlet.contextPath=/api
 
 # Flyway
 spring.flyway.enabled = true
