--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 
 	implementation 'org.flywaydb:flyway-core:9.2.1'
 
-	runtimeOnly 'org.postgresql:postgresql'
+	runtimeOnly 'com.h2database:h2:2.2.224'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-validation'
 	testImplementation 'org.mockito:mockito-core'
