--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,13 +4,18 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 server.port=8082
 server.servlet.contextPath=/api
 
-# Flyway
-spring.flyway.enabled = true
-spring.flyway.url = ${spring.datasource.url}
-spring.flyway.user = ${spring.datasource.username}
-spring.flyway.password = ${spring.datasource.password}
-spring.flyway.schemas=${spring.datasource.schema}
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:notification
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-# Swagger
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.api-docs.path=/api-docs
+# Flyway Configuration
+spring.flyway.enabled=true
+spring.flyway.url=${spring.datasource.url}
+spring.flyway.user=${spring.datasource.username}
+spring.flyway.password=${spring.datasource.password}
+spring.flyway.schemas=notification
