--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,11 @@ dependencies {
 	implementation 'org.flywaydb:flyway-core:9.2.1'
 
 	runtimeOnly 'com.h2database:h2:2.2.224'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-validation'
 	testImplementation 'org.mockito:mockito-core'
+	testImplementation 'org.mockito:mockito-junit-jupiter'
 }
 
 tasks.named('test') {
