--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,3 @@
-spring.profiles.active=dev
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-
 server.port=8082
 server.servlet.contextPath=/api
 
@@ -15,7 +12,7 @@ spring.h2.console.path=/h2-console
 
 # Flyway Configuration
 spring.flyway.enabled=true
-spring.flyway.url=${spring.datasource.url}
-spring.flyway.user=${spring.datasource.username}
-spring.flyway.password=${spring.datasource.password}
-spring.flyway.schemas=notification
+spring.flyway.url=jdbc:h2:mem:notification
+spring.flyway.user=sa
+spring.flyway.password=password
+spring.flyway.schemas=public
